--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,7 +10,8 @@ rtt-target = "0.4"
 st7735-lcd = "0.9.0"
 
 [dependencies.microbit-v2]
-path = "/local/src/old/microbit/microbit-v2"
+git = "https://github.com/BartMassey-upstream/microbit"
+branch = "add-spi"
 
 [dependencies.panic-rtt-target]
 version = "0.1"
