added pwm dimming for display backlight

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,3 +23,7 @@ features = ["cortex-m"]
 [dependencies.cortex-m]
 version = "0.7"
 features = ["inline-asm", "critical-section-single-core"]
+
+[features]
+default = ["dim"]
+dim = []
